--- a/html/nav.html
+++ b/html/nav.html
@@ -5,9 +5,9 @@
   </head>
   <nav>
     <ul>
-      <li><a href="index.html">👻😶‍🌫️🐎</a></li>
-      <li><a href="blog.html">🐈🐅🐆</a></li>
-      <li><a href="link.html">🐈‍⬛🦌🐕</a></li>
+      <li><a href="/html/index.html">👻😶‍🌫️🐎</a></li>
+      <li><a href="/html/blog.html">🐈🐅🐆</a></li>
+      <li><a href="/html/quiet.html">🐈‍⬛🦌🐕</a></li>
     </ul>
   </nav>
   
