--- a/html/index.html
+++ b/html/index.html
@@ -62,6 +62,11 @@
         <button class="btn2" onclick="window.open('http:\/\/www.las.cas.cn/yjsjy/xjyrc/xxyyq/201404/t20140401_4084402.html', '_blank')">
           读博实用技巧
         </button>
+
+        <button class="btn2" onclick="window.open('https:\/\/framist.github.io/safc/', '_blank')">
+          SAFC
+        </button>
+        
         <div class="btn-1-back">
           <a href="javascript:void(0)" class="btn-1" id="backbutton" onclick="changeBackground()">
             <p>切换背景</p>
