--- a/html/ssn.html
+++ b/html/ssn.html
@@ -8,7 +8,7 @@
       >实用指南</a
     >
     <p>about me : Jiayan Xu , 中科院软件所博8苦逼。名义导师在软件所，实际导师在计算所。梦想是有一天财富自由了，能自由地学习物理和数学。</p>
-    <p>进来的人送我一篇共一/共通讯。</p>
+    <p>✊进来的人送我一篇共一/共通讯👍。</p>
     </div>
 
 
