--- a/html/skill.html
+++ b/html/skill.html
@@ -2,6 +2,7 @@
 <html>
   <head>
      <body>
+       <p>-999.你看到这个隐藏的html后给我个共一/通讯不过分吧！😢 </p>
        <p>-2.你和你的对接人本质上都是打工人而已，没必要跟你的对接人发火，做规划的时候要明确真正给你带来苦难的对象 </p>
        <p>-1.你在上级的心中实际上不如公司接私活的外包，明面上可能不会表现出来，但你做规划的时候要注意到这一点</p>
        <p>0.能不给就不给，能不做就不做，没说就是不用做，谷歌第一页没有的就是搜不到</p>
