--- a/html/ssn.html
+++ b/html/ssn.html
@@ -1,18 +1,7 @@
 <div class="ssn">
-
-    
-    <a
-      href="https://github.com/miss-mumu/developer2gwy"
-      target="_blank"
-      rel="noopener noreferrer"
-      >实用指南</a
-    >
-    <p>about me : Jiayan Xu , 中科院软件所博8苦逼。名义导师在软件所，实际导师在计算所。梦想是有一天财富自由了，能自由地学习物理和数学。</p>
-    <p>✊进来的人送我一篇共一/共通讯👍。</p>
-    </div>
-
-
-
+  <a href="https://github.com/miss-mumu/developer2gwy" target="_blank" rel="noopener noreferrer">实用指南</a>
+  <p>about me : Jiayan Xu , 中科院软件所博8苦逼。名义导师在软件所，实际导师在计算所。梦想是有一天财富自由了，能自由地学习物理和数学。</p>
+  <p>✊💪进来的人送我一篇共一/共通讯👍。O(∩_∩)O~~\(≧▽≦)/~</p>
 </div>
 
 <div class="ssn">
@@ -27,7 +16,6 @@
 <div class="ssn">
   <p>趁手的工具罢了。</p>
 </div>
-
 
 <div class="ssn">
   <p>今天师兄的同学真诚地对我说：你老板跟我说第七年半开始不要你做项目了，先专心把毕业论文写完再做项目，你老板对你还挺好嘛。</p>
@@ -69,27 +57,28 @@
 </div>
 
 <div class="ssn">
-    <p>长毛三花被领养走了，去新家当核桃小公主了。只怪自己没能力领养她😢😢😢😢😢😢😢</p>
+  <p>长毛三花被领养走了，去新家当核桃小公主了。希望核桃在新家过的开心！</p>
+  <p>（虽然每次路过路口还是会下意识往核桃常蹲的地方看一眼。😥）</p>
 </div>
 
 <div class="ssn">
-    <p>已经出心理疾病了，做科研都感觉是偷偷在做，忍不住就想看微信有没有老板的消息，好害怕老板突然给我发项目的东西😢。</p>
+  <p>已经出心理疾病了，做科研都感觉是偷偷在做，忍不住就想看微信有没有老板的消息，好害怕老板突然给我发项目的东西😢。</p>
 </div>
 
 <div class="ssn">
-    <p>有项目的时候有上面的人催你推着你写，没项目了就得自己推自己。</p>
+  <p>有项目的时候有上面的人催你推着你写，没项目了就得自己推自己。</p>
 </div>
 
 <div class="ssn">
-    <p>给几年后修复好疲惫身心的自己：不要感谢在组里读博遭受的苦难，要感谢那个坚强的自己。</p>
+  <p>给几年后修复好疲惫身心的自己：不要感谢在组里读博遭受的苦难，要感谢那个坚强的自己。</p>
 </div>
 
 <div class="ssn">
-    <p>今天听师弟讲才知道，华科的老师也要学生上交每个月发的补贴。我还以为只有二三本垃圾学校才这样。不会我现在呆的所已经是国内科研天堂了吧？</p>
+  <p>今天听师弟讲才知道，华科的老师也要学生上交每个月发的补贴。我还以为只有二三本垃圾学校才这样。不会我现在呆的所已经是国内科研天堂了吧？</p>
 </div>
 
 <div class="ssn">
-    <p>读博小关卡（1/N）：这个项目对你的研究很有帮助，能发论文。</p>
+  <p>读博小关卡（1/N）：这个项目对你的研究很有帮助，能发论文。</p>
 </div>
 
 
@@ -100,9 +89,9 @@
 <div class="ssn">
   <p>火箭发射成功
 
-宇航员：啊！太爽啦！太沸腾啦！燃料也别闲着，出来叫两声
+    宇航员：啊！太爽啦！太沸腾啦！燃料也别闲着，出来叫两声
 
-火箭燃料：啊，好爽，你好有本领</p>
+    火箭燃料：啊，好爽，你好有本领</p>
 </div>
 
 <div class="ssn">
@@ -135,7 +124,7 @@
 
 <div class="ssn">
   <p>三天要写六百页标书的技术方案，你妈的还是五号字单倍行距。</p>
-   <img src="/dx/231012.png" height="100" />
+  <img src="/dx/231012.png" height="100" />
   gpt都能拒绝，我却不能拒绝😭
 </div>
 
@@ -155,7 +144,7 @@
 
 <div class="ssn">
   <p>北极鲶鱼92岁时儿孙饶膝，死在大美丽医院的病床上，旁观人看到了说：
-正义可能迟到，但永远不会缺席。</p>
+    正义可能迟到，但永远不会缺席。</p>
 </div>
 
 <div class="ssn">
@@ -165,13 +154,9 @@
   <p>虽然博士和硕士一样都是三年，但是攻读博士学位的这四年，将成为你人生中最难忘的五年，六年后你毕业的时候，回想过去七年的努力，你会为这八年的付出而骄傲的。</p>
 </div>
 
-<div class="ssn">  
-  <p><a
-      href="https://www.zhihu.com/question/28679417/answer/1656531200"
-      target="_blank"
-      rel="noopener noreferrer"
-      >什么样的人适合读博士? - 令呱冲的回答 - 知乎</a
-    >
+<div class="ssn">
+  <p><a href="https://www.zhihu.com/question/28679417/answer/1656531200" target="_blank"
+      rel="noopener noreferrer">什么样的人适合读博士? - 令呱冲的回答 - 知乎</a>
   </p>
 </div>
 
@@ -217,15 +202,9 @@
 
 <div class="ssn">
   <p>
-    <iframe
-      src="//player.bilibili.com/player.html?bvid=BV1wo4y1b7Ff&page=1&autoplay=0"
-      allowfullscreen="allowfullscreen"
-      width="100%"
-      height="300"
-      scrolling="no"
-      frameborder="0"
-      sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"
-    >
+    <iframe src="//player.bilibili.com/player.html?bvid=BV1wo4y1b7Ff&page=1&autoplay=0"
+      allowfullscreen="allowfullscreen" width="100%" height="300" scrolling="no" frameborder="0"
+      sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts">
     </iframe>
   </p>
 </div>
