--- a/html/index.html
+++ b/html/index.html
@@ -54,7 +54,9 @@
           </span>
         </a>
       </div>
-
+    </div>
+    
+    <div class="button-container">
       <button class="btn2" id="playButton1">播放视频1</button>
       <button class="btn2" id="playButton2">播放视频2</button>
       <div class="videoModal" id="videoModal1">
