更新退学申请表

--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
     <div class="button-container">
       <!-- <button class="btn1" id="backbutton">切换背景</button> -->
       <button class="btn2"
-        onclick="window.open('http:\/\/www.las.cas.cn/yjsjy/xjyrc/xxyyq/201404/t20140401_4084402.html', '_blank')">
+        onclick="window.open('http:\/\/yjsb.ciac.cas.cn/xjgl/xzzq_43498/202312/t20231201_765114.html', '_blank')">
         读博实用技巧
       </button>
 
