--- a/html/ssn.html
+++ b/html/ssn.html
@@ -9,6 +9,10 @@
   <p>💫摸到了学校的长毛三花（核桃），很乖不抓人💫</p>
 </div>
 
+<div class="hide-ssn">
+  <p>少喝为妙</p>
+</div>
+
 <div class="ssn">
   <p>换条路不一定更好，但继续现在这条一定很烂。</p>
 </div>
