--- a/html/index3.html
+++ b/html/index3.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8" />
     <title>💫(｡･∀･)ﾉﾞ🌟</title>
     <link rel="stylesheet" href="/css/blog.css" />
-    <link rel="shortcut icon" href="/icons/kinako-32.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/icons/kingpudding-32.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="pragma" content="no-store" />
     <meta http-equiv="content-type" content="no-store, must-revalidate" />
     <meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT" />
   </head>
   <body>
-    <div id="empty" class="emptyblock"> </div>
-    <div id="buttonContainer" class="buttoncontainer"> </div>
-    <div id="contentContainer" class="contentcontainer"> </div>
+    <div class="clustrmap" id="clustrmap">
+        <a href='https://clustrmaps.com/site/1byfh'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=6c1ff2&w=a&t=tt&d=6BF4PSiBEKK3OZMxuOPmXfRE0ko6FofJ2Uc8O1r7PSM&co=55d3ed'/></a>
+    </div>
   </body>
-  <script src="/js/blog.js"></script>
-  <script src="/js/showdown.min.js"></script>
   <script src="/js/daorumuban.js"></script>
 </html>
