奇怪的更新

--- a/html/index3.html
+++ b/html/index3.html
@@ -11,9 +11,10 @@
     <meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT" />
   </head>
   <body>
-    <div class="clustrmap" id="clustrmap">
+    <!-- <div class="clustrmap" id="clustrmap">
         <a href='https://clustrmaps.com/site/1byfh'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=6c1ff2&w=a&t=tt&d=6BF4PSiBEKK3OZMxuOPmXfRE0ko6FofJ2Uc8O1r7PSM&co=55d3ed'/></a>
-    </div>
+    </div> -->
+    
   </body>
   <script src="/js/daorumuban.js"></script>
 </html>
