--- a/html/index3.html
+++ b/html/index3.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>💫(｡･∀･)ﾉﾞ🌟</title>
-    <link rel="stylesheet" href="/css/blog.css" />
-    <link rel="shortcut icon" href="/icons/kingpudding-32.png" type="image/x-icon" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="pragma" content="no-store" />
-    <meta http-equiv="content-type" content="no-store, must-revalidate" />
-    <meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT" />
-  </head>
-  <body>
-    <!-- <div class="clustrmap" id="clustrmap">
+
+<head>
+  <meta charset="UTF-8" />
+  <title>💫(｡･∀･)ﾉﾞ🌟</title>
+  <link rel="stylesheet" href="/css/index3.css" />
+  <link rel="shortcut icon" href="/icons/kingpudding-32.png" type="image/x-icon" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="pragma" content="no-store" />
+  <meta http-equiv="content-type" content="no-store, must-revalidate" />
+  <meta http-equiv="expires" content="Wed, 26 Feb 1997 08:21:57 GMT" />
+</head>
+
+<body>
+  <!-- <div class="clustrmap" id="clustrmap">
         <a href='https://clustrmaps.com/site/1byfh'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=6c1ff2&w=a&t=tt&d=6BF4PSiBEKK3OZMxuOPmXfRE0ko6FofJ2Uc8O1r7PSM&co=55d3ed'/></a>
     </div> -->
-    
-  </body>
-  <script src="/js/daorumuban.js"></script>
+  <div class="mainblock">
+    <p> </p>
+    <p> </p>
+      <div class="clustrmap" id="clustrmap">
+        <a href='https://clustrmaps.com/site/1byfh'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=6c1ff2&w=a&t=tt&d=6BF4PSiBEKK3OZMxuOPmXfRE0ko6FofJ2Uc8O1r7PSM&co=55d3ed'/></a>
+    </div>
+    <p> </p>
+  </div>
+  <footer>
+    <div class="footer-button-container">
+      <button class="active-button">
+        <img src="/icons/Sticker22.png" alt="Button Image" class="button-image">
+        <span class="button-text">kkkk</span>
+      </button>
+      <button class="unactive-button">
+        <img src="/icons/Sticker45.png" alt="Button Image" class="button-image">
+        <span class="button-text">cccc</span>
+      </button>
+      <button class="unactive-button">
+        <img src="/icons/Sticker39.png" alt="Button Image" class="button-image">
+        <span class="button-text">dddd</span>
+      </button>
+      <button class="unactive-button">
+        <img src="/icons/Sticker17.png" alt="Button Image" class="button-image">
+        <span class="button-text">bbbb</span>
+      </button>
+      <button class="unactive-button">
+        <img src="/icons/Sticker34.png" alt="Button Image" class="button-image">
+        <span class="button-text">oooo</span>
+      </button>
+    </div>
+  </footer>
+</body>
+<script src="/js/daorumuban.js"></script>
+
 </html>
