--- a/html/ssn.html
+++ b/html/ssn.html
@@ -21,7 +21,7 @@
   <p>换条路不一定更好，但继续现在这条一定很烂。</p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>趁手的工具罢了。</p>
 </div>
 
@@ -50,13 +50,13 @@
   <p>看到中介和军工领导们五环内买的大别墅和学区房，不禁想到读博这几年一个人给祖国创造了几千万的GDP，倍感自豪😎。</p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>张主任今天问我关于留所的事情，回想了一下九年前选择进组那时的情况，如果当时有勇气gap一年，或者退学重申请，现在也早毕业了。</p>
   <p>感觉三四年级之前退学都不算晚，真说不准退学会不会毕业更快。</p>
   <p>而且找工作的时候发现，678年带着水刊毕业出去，在正常培养体系的人眼里和退学区别也不大了（正要接手我项目的师弟不许退学）🙏🙏🙏</p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>好久没更新了，貌似只有被项目压的难受才会有动力到这里来骂两句</p>
 </div>
 
@@ -69,7 +69,7 @@
   <p>（虽然每次路过路口还是会下意识往核桃常蹲的地方看一眼。😥）</p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>已经出心理疾病了，做科研都感觉是偷偷在做，忍不住就想看微信有没有老板的消息，好害怕老板突然给我发项目的东西😢。</p>
 </div>
 
@@ -77,24 +77,24 @@
   <p>有项目的时候有上面的人催你推着你写，没项目了就得自己推自己。</p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>给几年后修复好疲惫身心的自己：不要感谢在组里读博遭受的苦难，要感谢那个坚强的自己。</p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>今天听师弟讲才知道，华科的老师也要学生上交每个月发的补贴。我还以为只有二三本垃圾学校才这样。不会我现在呆的所已经是国内科研天堂了吧？</p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>读博小关卡（1/N）：这个项目对你的研究很有帮助，能发论文。</p>
 </div>
 
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>你作为学生，要对计算所负责！</p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>火箭发射成功
 
     宇航员：啊！太爽啦！太沸腾啦！燃料也别闲着，出来叫两声
@@ -110,7 +110,7 @@
   <p> 👍 时代的局限，无奈的选择，必要的牺牲，伟大的探索，发展的阵痛，后人的智慧 👍</p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>感觉逐渐感受到了学生和工人的区别，可能就是学生从小到大被驯化出来的愧疚感，即使是被剥削，也会因为被剥削的时候出力不够，影响了老板财富自由和中介买万柳学区房而愧疚，并且通过透支自己的时间和前途，来弥补躺着数钱的人们的损失。</p>
 </div>
 
@@ -118,7 +118,7 @@
   <p>别动不动就说进机关，我问你，你进机关了，领导孩子进哪里？去下工地吗？</p>
 </div>
 
-<div class="sn">
+<div class="hide-ssn">
   <p>理解师兄，成为师兄。</p>
   <p>现在的情况就是每个月几千块收入的我被七位数年薪的人压榨，剥削出他们的第三套大学区房和一个亿财富自由，还要时不时抽鞭子。</p>
 </div>
@@ -140,7 +140,7 @@
   <p>看见日本人跳楼，就说日本社会压抑，看见国人的自杀悲剧，却要讨论个人的心理问题。</p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>穷人在国内科研的本质就是给高干和院士们洗钱。陪太子读书的高级耗材。</p>
 </div>
 
@@ -155,7 +155,7 @@
     正义可能迟到，但永远不会缺席。</p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>科研做到自己难受，离开不仅不难过反而很开心。（妈的好像离不开）</p>
 </div>
 <div class="ssn">
@@ -168,7 +168,7 @@
   </p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>隔壁组留所的师兄：要让每一个被老板剥削的同学都风风光光地毕业，真好啊</p>
 </div>
 <div class="hide-ssn">
