--- a/html/ssn.html
+++ b/html/ssn.html
@@ -25,7 +25,7 @@
   <p>趁手的工具罢了。</p>
 </div>
 
-<div class="ssn">
+<div class="hide-ssn">
   <p>今天师兄的同学真诚地对我说：你老板跟我说第七年半开始不要你做项目了，先专心把毕业论文写完再做项目，你老板对你还挺好嘛。</p>
 </div>
 
