--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <script>
-    window.location.href = "/html/index.html";
+    #window.location.href = "/html/index.html";
   </script>
 </head>
 <body>
